tests/semantic/fact_number/fact_number.err
Error: Number constant (type mismatch) in file fact_number.dl at line 7
F(1000,"0002").
--^-------------
1 errors generated, evaluation aborted
