tests/semantic/fact_number/fact_number.dl
// Check if unquoted numbers are rejected by the parser
.type Node

.decl F (node1:Node, node2:Node)
.input F ()

// Not ok, number
F(1000,"0002").

